2013-09-?? Felipe Castro (-) <fefcas@gmail.com>

	* Release 2.00

2013-08-31 Felipe Castro (-) <fefcas@gmail.com>

	* Release 1.9.9
	* Added translations:
	- Greek
	* Fixed:
	- Turkish keyboard layouts.
	* Changed:
	- Updated the greek keyboard layout, the old one is renamed to qwerty_old.
	- Default foreground color for the tutor practice text made more greenish.
	- Updated autotools and gettext infrastructure.

2013-08-01 Felipe Castro (-) <fefcas@gmail.com>

	* Release 1.9.8
	* Updated translations:
	- Esperanto.
	- French.
	- Vietnamese.
	- Kirghiz.

2013-02-23 Felipe Castro (-) <fefcas@gmail.com>

	* Release 1.9.7
	* Added:
	- Bulgarian translation.
	* Updated:
	- Kyrgyz translation.
	- Galician translation.
	* Changed:
	- Galician text for fluidity practice, it had content with violence.
	- Galician words for speed practice.
	- Filtering progress charts according to keyboard (basic & adapt) or
	  language (velo & fluid). See side effects on NEWS!
	- Dismissing keys which are not in the current keyboard (keyset), in
	  the error/speed accounting process for the adapt personal
	  practicing. Results for these are saved now in specific files, for
	  each keyboard. See side effects on NEWS!

2012-11-20 Felipe Castro (-) <fefcas@gmail.com>

	* Release 1.9.6
	* Added:
	- Kyrgyz translation (partial)
	- Telugu translation (partial)
	- Workman (US) layout
	* Changed:
	- Explicit linking with gmodule-2.0, to avoid problem with Implicit
	DSO linking (in Fedora).
	- Orange color for keys now a bit darker.
	- Basic lessons with only 2 letters are now shorter (4 lines only).
	- Russian internal sub-dictionary changed, because of spelling errors.
	* Updated:
	- Automake files (1.11.6)
	- Basque translation
	- Russian translation

2012-06-17 Felipe Castro (-) <fefcas@gmail.com>

	* Release 1.9.5
	* Added:
	- Warning about the need to use backspace on the fluidity module. 
	- Wolof translation.
	* Fixed:
	- dvorak_es_nativo.kbd: it missed the key <