@@ -1,9 +1,9 @@
 _______________________________________________________________
 Simple list of things that could be done in future (long term) releases:
 
+- Allow the user to delete his full name from the web, at Top 10 (or Top 200). Stop reading "~/.config/klavaro" subdir.
 - Possibility to change the goals for accuracy, speed, fluidness, at least from the preferences file.
 - Collect wrong words (or slow typed ones), and create special exercises with them (velocity module).
-- Allow the user to set his full name, which will appear in the web, at Top 10 (or Top 200).
 - Print report after completion of a fluidity session.
 - Local network support for local scores (libavahi?); zeroconf allows sharing ranking data among users connected to the same network.
 
