@@ -1,18 +1,59 @@
-﻿Это была маленькая разминка, а теперь будем писать всерьёз: Грузоподъёмный неперегруженный грузчик с грузом ехал с грузом на грузовом лифте с другими грузчиками у которых были неперегруженные грузовые грузы и вместе они вышли с грузового лифта с грузами и погрузили грузы на грузоподъёмник! Иллюзионая иллюзия сильно проиллюзиовала меня, а Импорвитация вызывает у меня сильные головные боли!
+Уже было начало июня, когда князь Андрей, возвращаясь домой, въехал опять в ту березовую рощу, в которой этот старый, корявый дуб так странно и памятно поразил его. Бубенчики еще глуше звенели в лесу, чем полтора месяца тому назад; все было полно, тенисто и густо; и молодые ели, рассыпанные по лесу, не нарушали общей красоты и, подделываясь под общий характер, нежно зеленели пушистыми молодыми побегами.
 
-в Школе 6 г.Новороссийска учиться Замученный перемученый ученик! инкриминировать инкроминацию, кролик съел очень большой кочан капусты. Краснознамённый красноречивый красногвардеец ехал по краснолесью и красногорью на своём красном перекрашеном от красоты или   красноты красочно красивом крашеном коне. Ленин ехал по ленинскому проспекту на ленинской машине вместе с Леной.
+Целый день был жаркий, где-то собиралась гроза, но только небольшая тучка брызнула на пыль дороги и на сочные листья. Левая сторона леса была темна, в тени; правая мокрая, глянцовитая блестела на солнце, чуть колыхаясь от ветра. Все было в цвету; соловьи трещали и перекатывались то близко, то далеко.
 
-Я был у евреев в еврейском городе и гулял по еврейским улицам в еврейской одежде, покупал еврейскую еду, разговаривал с евреями и вообще я ЕВРЕЙ!!! Ты когда-нибудь видел меридиональный мередиан на мередиальновысокоразвитоимпульсивном уровне? Металлорежущий металлургический металлург проходил курсы по резанию металла на уроке металлургии. 
+"Да, здесь, в этом лесу был этот дуб, с которым мы были согласны", подумал князь Андрей. "Да где он", подумал опять князь Андрей, глядя на левую сторону дороги и сам того не зная, не узнавая его, любовался тем дубом, которого он искал. Старый дуб, весь преображённый, раскинувшись шатром сочной, темной зелени, млел, чуть колыхаясь в лучах вечернего солнца. Ни корявых пальцев, ни болячек, ни старого недоверия и горя, — ничего не было видно. Сквозь жесткую, столетнюю кору пробились без сучков сочные, молодые листья, так что поверить нельзя было, что этот старик произвел их. "Да, это тот самый дуб", подумал князь Андрей, и на него вдруг нашло беспричинное, весеннее чувство радости и обновления. Все лучшие минуты его жизни вдруг в одно и то же время вспомнились ему. И Аустерлиц с высоким небом, и мертвое укоризненное лицо жены, и Пьер на пароме, и девочка, взволнованная красотою ночи, и эта ночь, и луна, — и все это вдруг вспомнилось ему.
 
-Механизировать метрополитен, метеоритная метеорология. недобросовестный, недогадливый и недоверчивый мальчик пошёл гулять неглядя по недоделаной улице и вдруг произошло недосягаемое недаразумение и недоросль недосмотрел до недотроги и недоучки и из-за этого произошёл недюжинный нежданный недочёт! Всё Пока!
+"Нет, жизнь не кончена в 31 год, вдруг окончательно, беспеременно решил князь Андрей. Мало того, что я знаю всё то, что есть во мне, надо, чтобы и все знали это: и Пьер, и эта девочка, которая хотела улететь в небо, надо, чтобы все знали меня, чтобы не для одного меня шла моя жизнь, чтоб не жили они так независимо от моей жизни, чтоб на всех она отражалась и чтобы все они жили со мною вместе!"
 
-1945 проверка. начинаем зарядку и пишем предложения: С горы откарывается чудесный вид. На бывшей окраине нашего города открыт новый спортивный комплекс, в центре его построено высокое куполообразное здание из стекла и битона. Разминка закончена на 5, и скоро ты будешь писать 300-400 знаков в минуту без ошибок! :) А теперь как говорится к делу:) Независимые люди, покорить Эверест, неизъяснимое предложение. Я предпочитаю читать Пушкина, но не люблю читать Гоголя-моголя. по-моему, по-твоему, по-нашему, по-понятиям.
+Вечером мы выступили в ночной марш к реке Рузе, за тридцать километров от Волоколамска. Житель южного Казахстана, я привык к поздней зиме, а здесь, в Подмосковье, в начале октября утром уже подмораживало. На рассвете по схваченной морозом дороге, по затвердевшей, вывороченной колесами грязи мы подошли к селу Новлянскому. Оставив батальон близ села, в лесу, я с командирами рот отправился на рекогносцировку. Моему батальону было отмерено семь километров по берегу извилистой Рузы. В бою, по нашим уставам, такой участок велик даже для полка. Это, однако, не тревожило. Я был уверен, что, если противник действительно подойдет когда-нибудь сюда, его встретит на наших семи километрах не батальон, а пять или десять батальонов. С таким расчетом, думалось мне, надо готовить укрепления.
 
-Когда Крамской увидел присланную в Петербург картину "Мокрый луг", он был потрясён и сказал: "ничего себе". Какая у тебя мечта? Писать 400 знаков в секунду без ошибок! играть в пинг-понг пинг-понговым мячиком. Рабоче-крестьянская работоспособность, раздвоение личности!идти наповал, одевать на руку перстень. Властелин колец. Нализо конфидециальный документ.
+Не ожидайте от меня живописания природы. Я не знаю, красив или нет был расстилавшийся перед нами вид. По темному зеркалу неширокой медлительной Рузы распластались большие, будто вырезанные листья, на которых летом цвели, наверное, белые лилии. Может быть, это красиво, но я для себя засек: дрянная речонка, она мелка и удобна противнику для переправы. Однако береговые скаты с нашей стороны были недоступными для танков: поблескивая свежесрезанной глиной, хранящей следы лопат, к воде ниспадал отвесный уступ, называемый на военном языке эскарпом.
 
-Виндоус-по-нашему окна! моя мечта: Форматировать диск С, ломать компы, бить молотком по клаве, пинать системный блок, выкидывать из окна модем! Про, ПРО, пРо, про это, про то, про нас проносить, УФ, пронесло! щий, Щий, зловещий, ить, ить, ИтЬ, Ить, пить, пилить, клеить. Ать, аТЬ, аТь, ругать, спАТЬ, просыпать уроки, играть в компьютерные игры. ик, ИК, иК, Ик, ящик, ключик, мучик, сючик, пучик. Набирать числа, вводить знаки.
+За рекой виднелась даль - открытые поля и отдельные массивы, или, как говорят, клины, леса. В одном месте, несколько наискосок от села Новлянского, лес на противоположном берегу почти вплотную примыкал к воде. В нем, быть может, было все, чего пожелал бы художник, пишущий русский осенний лес, но мне этот выступ казался отвратительным: тут вероятнее всего мог, укрываясь от нашего огня, сосредоточиться для атаки противник. К черту эти сосны и ели! Вырубить их! Отодвинуть лес от реки! Хотя никто из нас, как сказано, не ожидал здесь вскорости боев, но нам была поставлена задача: оборудовать оборонительный рубеж, и следовало выполнить ее с полной добросовестностью, как положено офицерам и солдатам Красной Армии.
 
-Излишняя роскошь, грубая ложь, правдивая речь, бескорыстная помощь, беречь время, увлечься спортом; читаешь интересную книгу, ловишь большую рыбу, купаешься в солёном море. Консерваторы сидят в консерватории. Йога ест йогурт. переносить песок. Делать ремонт, купить дорогую машину. Травить нафталином моль.
+Почти в самом центре полярной станции страны раскинулось огромное Таймырское озеро. С запада на восток тянется оно длинной блистающей полосой. На севере возвышаются каменные глыбы, за ними маячат черные хребты. Сюда до последнего времени человек совсем не заглядывал. Лишь по течению рек можно встретить следы пребывания человека. Весенние воды иногда приносят с верховьев рваные сети, поплавки, поломанные весла и другие немудреные принадлежности рыбачьего обихода.
 
-Неизгладимое впечатление, получить семизначную асю; наименование товара. Он в полном одиночестве бродил по городу в поисках райского наслаждения (типа баунти), маневрировать, манёвр, манеж, быть человеком! Вы закончили обучение ! Клаваро и Мандрива рулят!
+У заболоченных берегов озера тундра оголилась, только кое-где белеют и блестят на солнце пятна снега. Движимое силой инерции, огромное ледяное поле напирает на берега. Еще крепко держит ноги скованная ледяным панцирем мерзлота. Лед в устье рек и речонок долго будет стоять, а озеро очистится дней через десять. И тогда песчаный берег, залитый светом, перейдет в таинственное свечение сонной воды, а дальше - в торжественные силуэты, смутные очертания противоположного берега.
 
+В ясный ветреный день, вдыхая запахи пробужденной земли, бродим по проталинкам тундры и наблюдаем массу прелюбопытных явлений. Необычайно сочетание высокого неба с холодным ветром. Из-под ног то и дело выбегает, припадая к земле, куропатка; сорвется и тут же, как подстреленный, упадет на землю крошечный куличок. Стараясь увести незваного посетителя от своего гнезда, куличок начинает кувыркаться у самых ног. У основания каменной россыпи пробирается прожорливый песец, покрытый клочьями вылинявшей шерсти. Поравнявшись с обломками камней, песец делает хорошо рассчитанный прыжок и придавливает лапами выскочившую мышь. А еще дальше горностай, держа в зубах серебряную рыбу, скачками проноситься к нагроможденным валунам.
+
+У медленно тающих ледничков скоро начнут оживать и цвести растения. Первыми зацветут кандык и горянка, которые развиваются и борются за жизнь еще под прозрачною крышкою льда. В августе среди стелющейся на холмах полярной березы появятся первые грибы.
+
+В поросшей жалкой растительностью тундре есть свои чудесные ароматы. Наступит лето, и ветер заколышет венчики цветов, жужжа пролетит и сядет на цветок шмель.
+
+Небо опять хмурится, ветер начинает бешено свистеть. Пора возвращаться в дощатый домик полярной станции, где вкусно пахнет печеным хлебом и уютом человечьего жилья. А завтра мы начнем разведывательные работы.
+
+Все последние дни Сотников был словно в прострации. Чувствовал он себя скверно: обессилел без воды и пищи. И он молча, в полузабытьи, сидел среди тесной толпы людей на колючей, сухой траве без особых мыслей в голове и, наверно, потому не сразу понял смысл лихорадочного шепота рядом: "Хоть одного, а прикончу. Все равно…". Сотников осторожно повел в сторону взглядом: тот самый его сосед-лейтенант незаметно для других доставал из-под грязных бинтов на ноге обыкновенный перочинный ножик, и в глазах его таилась такая решимость, что Сотников подумал: такого не удержишь.
+
+Двое конвоиров, сойдясь вместе, прикуривали от зажигалки, один на коне чуть поодаль бдительно осматривал колонну.
+
+Они еще посидели на солнце, может, минут пятнадцать, пока с холма не послышалась какая-то команда, и немцы начали поднимать колонну. Сотников уже знал, на что решился сосед, который сразу же начал забирать из колонны в сторону, поближе к конвоиру. Конвоир этот был сильный, приземистый немец, как и все, с автоматом на груди, в тесном, пропотевшем под мышками кителе; из-под мокроватой с краев суконной пилотки выбивался совсем не арийский - черный, почти смоляной чуб. Немец торопливо докурил сигарету, сплюнул сквозь зубы и, по-видимому намереваясь подогнать какого-то пленного, нетерпеливо ступил два шага к колонне. В то же мгновение лейтенант, словно коршун, бросился на него сзади и по самый черенок вонзил нож в его загорелую шею.
+
+Коротко крякнув, немец осел наземь, кто-то поодаль крикнул: "Полундра!" - и несколько человек, будто их пружиной метнуло из колонны, бросились в поле. Сотников тоже рванулся прочь.
+
+Замешательство немцев длилось секунд пять, не больше, тотчас же в нескольких местах ударили очереди - первые пули прошли над его головой. Но он бежал. Кажется, никогда в жизни он не мчался с такой бешеной прытью, и в несколько широких прыжков взбежал на бугор с сосенками. Пули уже густо и беспорядочно пронизывали сосновую чащу, со всех сторон его осыпало хвоей, а он все мчал, не разбирая пути, как можно дальше, то и дело с радостным изумлением повторяя про себя: "Жив! Жив!"
+
+Минут через десять Тарвин начал догадываться, что все эти усталые, измученные люди представляли интересы полдюжины различных фирм Калькутты и Бомбея. Как и каждую весну, они без всякой надежды на успех осаждали королевский дворец, пытаясь получить хоть что-то по счетам с должника, которым был сам король. Его Величество заказывал все подряд, без разбору, и в огромных количествах - расплачиваться же за покупки очень не любил. Он покупал ружья, несессеры, зеркала, дорогие безделушки для каминной полки, вышивки, сверкающие всеми цветами радуги елочные украшения, седла и конскую сбрую, почтовые кареты, экипажи с четверками лошадей, духи, хирургические инструменты, подсвечники, китайский фарфор - поштучно или оптом, за наличные или в кредит, как заблагорассудится Его Королевскому Величеству. Теряя интерес к приобретенным вещам, он тут же утрачивал и желание платить за них, так как мало что занимало его пресыщенное воображение дольше двадцати минут. Иной раз случалось так, что сама покупка вещи удовлетворяла его сполна, и ящики с драгоценным содержимым, прибывавшие из Калькутты, оставались нераспакованными. Мир, воцарившийся в Индийской империи, мешал ему взяться за оружие и направить его против своих собратьев-королей, и он лишился единственной радости и забавы, которая тешила его самого и его предков на протяжении целых тысячелетий. И все же он мог играть в эту игру и сейчас, правда, в несколько видоизмененной форме - воюя с приказчиками, тщетно пытающимися получить с него по счету.
+
+Итак, по одну сторону стоял сам политический резидент государства, посаженный на это место для того, чтобы обучать короля искусству управления, и главное, экономии и бережливости, а по другую сторону - точнее сказать, у дворцовых ворот, обыкновенно находился коммивояжер, в душе которого боролись презрение к злостному неплательщику и присущее каждому англичанину благоговение перед королем.
+
+Нет ничего лучше Невского проспекта, по крайней мере в Петербурге; для него он составляет все. Чем не блестит эта улица - красавица нашей столицы! Я знаю, что ни один из бледных и чиновных ее жителей не променяет на все блага Невского проспекта. Не только кто имеет двадцать пять лет от роду, прекрасные усы и удивительно сшитый сюртук, но даже тот, у кого на подбородке выскакивают белые волоса и голова гладка, как серебряное блюдо, и тот в восторге от Невского проспекта. А дамы! О, дамам еще больше приятен Невский проспект. Да и кому же он не приятен? Едва только взойдешь на Невский проспект, как уже пахнет одним гуляньем. Хотя бы имел какое-нибудь нужное, необходимое дело, но, взошедши на него, верно, позабудешь о всяком деле. Здесь единственное место, где показываются люди не по необходимости, куда не загнала их надобность и меркантильный интерес, объемлющий весь Петербург.
+
+Невский проспект есть всеобщая коммуникация Петербурга. Здесь житель Петербургской или Выборгской части, несколько лет не бывавший у своего приятеля на Песках или у Московской заставы, может быть уверен, что встретится с ним непременно. Никакой адрес-календарь и справочное место не доставят такого верного известия, как Невский проспект. Всемогущий Невский проспект! Единственное развлечение бедного на гулянье Петербурга! Как чисто подметены его тротуары, и, боже, сколько ног оставило на нем следы свои! И неуклюжий грязный сапог отставного солдата, под тяжестью которого, кажется, трескается самый гранит, и миниатюрный, легкий, как дым, башмачок молоденькой дамы, оборачивающей свою головку к блестящим окнам магазина, как подсолнечник к солнцу, и гремящая сабля исполненного надежд прапорщика, проводящая по нем резкую царапину, - все вымещает на нем могущество силы или могущество слабости. Какая быстрая совершается на нем фантасмагория в течение одного только дня!
+
+Никакого упадка нет, да и быть не может. Просто цензуру смягчили, а частию, слава богу, и вовсе упразднили, и то, что раньше мы слышали в пивных и подворотнях, сегодня услаждает наш слух, доносясь с эстрады и с телеэкранов. Мы склонны считать это наступлением бескультурья и упадком Языка, но ведь бескультурье, как и всякая разруха, не в книгах и не на театральных подмостках, оно в душах и в головах. А с последними, на мой взгляд, ничего существенного за последние годы не произошло. Разве что начальство наше, опять же слава богу, отвлеклось от идеологии и увлеклось более распиливанием бюджета. Вот языки и подраспустились, а Язык обогатился замечательными новшествами в широчайшем диапазоне — от "хеджирования портфеля ГКО с помощью фьючерсов" и до появления интернет-жаргона.
+
+Разговоры об упадке вообще и Языка в частности - это, по сути, результат отсутствия ясных указаний сверху. Появятся соответствующие указания - и упадок прекратится как бы сам собой, тут же сменившись каким-нибудь "новым расцветом" и всеобщим суверенным "благорастворением воздyхов".
+
+Литература благополучно процветает, оставшись, наконец, почти без цензуры и в сени либеральных законов, касающихся книгоиздания. Читатель избалoван до предела. Ежегодно появляется несколько десятков книг такого уровня значимости, что, появись любая из них на прилавках лет 25 назад, она тут же стала бы сенсацией года, а сегодня вызывает лишь снисходительно-одобрительное ворчание критики. Разговоры о пресловутом "кризисе литературы" не затихают, общественность требует немедленного появления новых булгаковых, чеховых, толстых, как водится забывая при этом, что любой классик - это обязательно "продукт времени", как хорошее вино и вообще как все хорошее. Не надо тянуть дерево за ветки вверх: оно от этого быстрее не вырастет. Впрочем, в разговорах о кризисе ничего плохого нет: пользы от них маловато, но и вреда ведь тоже не наблюдается.
+
+А Язык, как и прежде, живет своею собственной жизнью, медленной и непостижимой, непрерывно меняясь и при этом всегда оставаясь самим собой. С русским языком может произойти все, что угодно: перестройка, преображение, превращение, - но только не вымирание. Он слишком велик, могуч, гибок, динамичен и непредсказуем, чтобы взять и вдруг исчезнуть. Разве что - вместе с нами.
+
+Вопрос о том, зачем нужна грамотность, обсуждается широко и пристрастно. Казалось бы, сегодня, когда даже компьютерная программа способна выправить не только орфографию, но и смысл, от среднестатистического россиянина не требуется знания бесчисленных и порой бессмысленных тонкостей родного правописания. Я уж не говорю про запятые, которым не повезло дважды. Сначала, в либеральные девяностые, их ставили где попало или игнорировали вовсе, утверждая, что это авторский знак. Школьники до сих пор широко пользуются неписаным правилом: "Не знаешь, что ставить, - ставь тире". Не зря его так и называют - "знак отчаяния". Потом, в стабильные нулевые, люди начали испуганно перестраховываться и ставить запятые там, где они вообще не нужны. Правда, вся эта путаница со знаками никак не влияет на смысл сообщения. Зачем же тогда писать грамотно?
+
+Думаю, это нечто вроде тех необходимых условностей, которые заменяют нам специфическое собачье чутье при обнюхивании. Сколько-нибудь развитый собеседник, получив электронное сообщение, идентифицирует автора по тысяче мелочей: почерка, конечно, он не видит, если только послание пришло не в бутылке, но письмо от филолога, содержащее орфографические ошибки, можно стирать, не дочитывая.
+
+Известно, что в конце войны немцы, использовавшие русскую рабочую силу, угрозами вымогали у славянских рабов специальную расписку: "Такой-то обращался со мной замечательно и заслуживает снисхождения". Солдаты-освободители, заняв один из пригородов Берлина, прочли гордо предъявленное хозяином письмо с десятком грубейших ошибок, подписанное студенткой Московского университета. Степень искренности автора стала им очевидна сразу, и обыватель-рабовладелец поплатился за свою подлую предусмотрительность.
+
+У нас сегодня почти нет шансов быстро понять, кто перед нами: способы маскировки хитры и многочисленны. Можно сымитировать ум, коммуникабельность, даже, пожалуй, интеллигентность. Невозможно сыграть только грамотность - утонченную форму вежливости, последний опознавательный знак смиренных и памятливых людей, чтущих законы языка как высшую форму законов природы.
